--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,149 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+*{
+    margin:0;
+    padding:0;
+    font-family: 'Roboto', sans-serif;
+   
+}
+body{
+    background-color: black;
+}
+h3{
+    color:white;
+    margin:2px
+}
+h2{
+    color:white;
+    margin:20px
+} 
+
+div{
+    color:gray;
+}
+.navbar{
+    display:flex;
+    justify-content: space-between;
+    background-color: black;
+    padding:0% 3%;
+}
+.logo{
+    display: flex;
+    align-items: center;
+}
+.search{
+    display: flex;
+    align-items: center; 
+    gap:10px;
+}
+.search input{
+    padding: 5px;
+    border: 1px solid #ccc;
+    background-color: #222;
+    width:500px;
+    color:white;
+
+}
+.search button{
+    padding: 5px 10px;
+    margin-left: 5px;
+    background-color: #444;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.nav-icons{
+    display: flex;
+    align-items: center;  
+    gap:10px;
+}
+.bookCard{
+    display:flex;
+    flex-wrap: wrap;
+}
+.flex-item{
+    background-color: #AB71F461;
+    flex:1;
+    display: flex;
+   
+    margin: 10px;
+    cursor: pointer;
+    transition: width 0.3s;
+   
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+   
+    
+    
+   
+   
+}
+.info{
+   
+   
+   
+    
+   
+    margin: 5px;
+    height:80%;
+    padding: 10px;
+}
+.image {
+    height: 110%;
+   
+    transform: rotate(-3deg);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+
+
+.description{
+    font-size: 12px;
+    color:white;
+    margin-top: 5px;
+}
+.descrip{
+    font-size: 12px;
+}
+.more-books{
+    text-align: center;
+    margin-top: 40px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 20px;
+}
+.flex-expand{
+   width:100%;
+   display: flex;
+   
+    margin: 10px;
+    cursor: pointer;
+    transition: width 0.3s;
+}
+.btn{
+    display:flex;
+    justify-content: flex-end;
+    gap:10px;
+    margin-top: 5px;
+}
+.btn a{
+    text-decoration: none;
+    color:gray;
+    font-size: 18px;
+    border:1px solid gray;
+    padding: 2px 4px;
+}
+.display-none{
+    display: none;
+}
+.rating{
+    display: flex;
+    gap:3px;
+    color:white;
+    margin-top:5px;
+    font-size: 12px;
 }
